<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leo_docking</name>
  <version>1.0.0</version>
  <description>Package containing nodes performing autonomous docking to the powering station.</description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>

  <license>MIT</license>

  <author email="aleks@fictionlab.pl">Aleksander Szymański</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>action_msgs</depend>
  <depend>leo_docking_msgs</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>smach</exec_depend>
  <exec_depend>smach_ros</exec_depend>
  <exec_depend>python3-pykdl</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>aruco_opencv</exec_depend>
  <exec_depend>aruco_opencv_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_black</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_mypy</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
   <build_type>ament_cmake</build_type>
  </export>
</package>
