<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>leo_docking_msgs</name>
  <version>1.0.0</version>
  <description>Leo Docking ROS 2 Messages</description>
  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="aleks@fictionlab.pl">Aleksander Szymański</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
